cmake_minimum_required(VERSION 3.14)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCode main.cpp src/P0000_ProblemHead.h src/P0000_ProblemHead.cpp src/P0000_CommonHead.h src/P0001_TwoSum.cpp src/P0001_TwoSum.h src/P0002_AddTwoNumbers.cpp src/P0002_AddTwoNumbers.h src/P0146_LRUCache.cpp src/P0146_LRUCache.h src/P0147_InsertionSortList.cpp src/P0147_InsertionSortList.h src/P0148_SortList.cpp src/P0148_SortList.h)