cmake_minimum_required(VERSION 3.14)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCode main.cpp src/P0000_ProblemHead.h src/P0000_ProblemHead.cpp src/P0000_CommonHead.h src/P0001_TwoSum.cpp src/P0001_TwoSum.h src/P0002_AddTwoNumbers.cpp src/P0002_AddTwoNumbers.h src/P0146_LRUCache.cpp src/P0146_LRUCache.h src/P0147_InsertionSortList.cpp src/P0147_InsertionSortList.h src/P0148_SortList.cpp src/P0148_SortList.h src/P0149_MaxPointsOnLine.cpp src/P0149_MaxPointsOnLine.h src/P0150_EvaluateReversePolishNotation.cpp src/P0150_EvaluateReversePolishNotation.h src/P0151_ReverseWordsInAString.cpp src/P0151_ReverseWordsInAString.h src/P0003_LongestSubstringWithoutRepeatingCharacters.cpp src/P0003_LongestSubstringWithoutRepeatingCharacters.h src/P0152_MaximumProductSubarray.cpp src/P0152_MaximumProductSubarray.h src/P0153_FindMinimumInRotatedSortedArray.cpp src/P0153_FindMinimumInRotatedSortedArray.h)